# basic-devices

./: Cargo.toml  README.md
src/: adsr.rs  delay.rs  lib.rs  tremolo.rs
src/dynamics/: compressor.rs  level_detector.rs  limiter.rs  mod.rs  noise_gate.rs
src/reverb/: moorer_reverb.rs  rooms.rs
