[package]
name = "oxcable-basic-devices"
version = "0.5.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/oxcable/basic-devices"
repository = "https://github.com/oxcable/basic-devices"
documentation = "http://oxcable.github.io/basic-devices/doc/oxcable_basic_devices/index.html"
description = "Simple devices for building oxcable pipelines."
exclude= [ "wav/*" ]

[dependencies]
num = { version = "0.1.27", default-features = false }
oxcable = "0.5.0"
